chamber_of_commerce/css/content_style.css
/* Home */
    /* Mobile View */

    /* Tablet View */
    @media only screen and (min-width: 42rem) {

    }


    /* Desktop View */
    @media only screen and (min-width: 72rem) {

    }

/* City */
    /* Mobile View */
    #city {
        padding: 2rem;
    }
    #city h4 {
        text-align: center;
    }
    #city img {
        max-width: 100%;
    }
    #careerAd {
        background-color: #0468BF;
        color: white;
        padding: 1rem;
        position: fixed;
        bottom: 4px;
        right: 4px;
    }
    /* Tablet View */
    @media only screen and (min-width: 42rem) {
        #city {
            text-align: center;
        }
        #city img {
            max-width: 600px;
        }
        #city section {
            text-align: center;
            margin: 2rem;
        }
    }
    /* Desktop View */
    @media only screen and (min-width: 72rem) {
        #city {
            display: grid;
            grid-template-columns: repeat(2, 1fr);
            align-items: center;
        }
        #city img {
            max-width: 500px;
            margin: auto;
        }
    }

/* Contact */
    /* Mobile View */
    #contact {
        padding: 1rem;
        text-align: center;
    }
    #contact h2 {
        margin-top: 2rem;
    }
    #contact ul {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
    }
    #contact li {
        font-family: 'Brush Script MT', cursive;
        font-size: 2.5rem;
        list-style-type: none;
        padding: 1.5rem;
    }
    #contact form {
        max-width: 560px;
        margin: 0 auto;
    }
    #contact fieldset {
        margin: 2rem 0 2rem 0;
    }
    #contact legend {
        font-size: 1.5rem;
    }
    #contact label {
        display: block;
        margin-top: 1rem;
    }
    #contact input {
        margin-left: .5rem;
        margin-bottom: 5.rem;
    }
    #contact textarea {
        width: 90%;
        height: 5rem;
    }
    #contact input#submitButton {
        background-color: #049DBF;
        color: white;
        margin: 1rem;
        border: none;
        padding: .5rem;
    }
    /* Tablet View */
    @media only screen and (min-width: 42rem) {
        #contact iframe {
            width: 600px;
            height: 350px;
        }
    }
    /* Desktop View */
    @media only screen and (min-width: 72rem) {
        #contact hr {
            max-width: 1500px;
        }
        #contact form {
            margin: 0;
        }
        #contact div {
            display: flex;
            justify-content: center;
            align-items: center;
        }
        #contact iframe, #contact form {
            padding: 2rem;
        }
    }
/* Directory */
    /* Mobile View */
    
    /* Tablet View */
    @media only screen and (min-width: 42rem) {

    }


    /* Desktop View */
    @media only screen and (min-width: 72rem) {

    }

/* Join */
    /* Mobile View */
    #join {
        padding: 1rem;
        max-width: 800px;
    }
    #join h2 {
        margin-top: 2rem;
    }
    #join ul {
        justify-content: center;
    }
    #join form {
        max-width: 560px;
        margin: 0 auto;
    }
    #join fieldset {
        margin: 2rem 0 2rem 0;
    }
    #join legend {
        font-size: 1.5rem;
    }
    #join label {
        display: block;
        margin-top: 1.5rem;
    }
    #join input {
        padding: .5rem;
    }
    #join textarea {
        width: 90%;
        height: 5rem;
    }
    #join input#submitButton {
        background-color: #049DBF;
        color: white;
        margin: 1rem;
        border: none;
        padding: .5rem;
    }
    #join input.radioSelector {
        margin: 0 1rem;
    }
    /* Tablet View */
    @media only screen and (min-width: 42rem) {

    }


    /* Desktop View */
    @media only screen and (min-width: 72rem) {

    }
    /* Responce Page */
    #response p {
        text-align: center;
        padding: 2rem;
    }
    @media only screen and (min-width: 42rem) {
        #response p {
            font-size: 1.5rem;
        }
    }
    @media only screen and (min-width: 72rem) {
        #response p {
            font-size: 2rem;
        }
    }

